--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
   May Wang
   July 14, 2020
 
-  This is the styles-about.css page for my personal website. It is used by the about.html page to
-  factor out styles specific to this page.
+  This is the styles.css page for my personal website. It is used by the index.html page to factor
+  out styles specific to this page.
 */
 
 header {
