--- a/styles.css
+++ b/styles.css
@@ -2,39 +2,125 @@
   May Wang
   July 14, 2020
 
-  This is the styles.css page for my personal website. It is used by the index.html page to factor
-  out styles specific to this page.
+  This is the styles.css page for my personal website. It is used by the index.html page to give
+  the site a consistent look and feel.
 */
+html {
+  scroll-behavior: smooth;
+}
 
-header {
+body {
+  background-color: white;
+}
+
+main {
+  width: 80%;
+  margin: auto;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#intro {
   height: 100vh;
 }
 
-main > section p {
-  text-align: left;
+p {
+  font-size: 20pt;
+  text-align: center;
 }
 
-.square {
-  height: 300px;
-  width: 300px;
-  background-color: green;
+nav {
+  display: flex;
+  opacity: 0.7;
+  height: 12vh;
+  width: 100%;
+  background-color: rgb(211, 220, 250);
+  align-items: center;
+  justify-content: flex-end;
+  position: fixed;
+  top: 0;
 }
 
-#bio {
-  width: 70%;
+nav button {
+  padding: 10px;
 }
 
-#profile {
+nav div {
+  margin-right: 30px;
+}
+
+h1 {
+  text-transform: uppercase;
+  font-size: 70pt;
+  letter-spacing: 0.5rem;
+  margin: 0px;
+  font-weight: 400;
+}
+
+#about {
+  display: block;
+  text-align: center;
+  width: 100%;
+  background-color: rgb(211, 220, 250);
+  padding: 30px;
+}
+
+#about img {
   border-radius: 50%;
-  border: solid rgb(211, 220, 250);
-  width: 40vh;
-  height: 40vh;
-  float: left;
+  width: 45vh;
+  height: 45vh;
   margin: 40px;
   margin-left: 0px;
   margin-top: 0px;
+  float: left;
 }
 
-#profile:hover {
+#about img:hover {
   opacity: 0.7;
+  transform: scale(1.02);
+}
+
+#about p {
+  text-align: left;
+}
+
+h2 {
+  font-size: 40pt;
+  font-weight: 500;
+}
+
+button {
+  font-size: 18pt;
+  background-color: inherit;
+  border: none;
+  outline: none;
+}
+
+body, button {
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+}
+
+button:hover {
+  color: lightslategray;
+  cursor: pointer;
+}
+
+#top-btn {
+  float: right;
+}
+
+.hidden {
+  display: none;
+}
+
+footer {
+  font-size: 11px;
+  text-align: center;
+  padding: 20px;
 }
