edited profile pic

--- a/styles.css
+++ b/styles.css
@@ -80,11 +80,11 @@ h1 {
   margin-left: 25px;
   margin-top: 0px;
   float: left;
+  object-fit: cover;
 }
 
 #about img:hover {
-  opacity: 0.7;
-  transform: scale(1.02);
+  transform: scale(1.03);
 }
 
 #about p {
